--- a/Otsu_thresholding.ipynb
+++ b/Otsu_thresholding.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -44,6 +44,31 @@
       "(2048, 1504)\n",
       "10519\n",
       "98\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\matteo\\anaconda3\\envs\\tub\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
+      "The 'gui_qt()' context manager is deprecated.\n",
+      "If you are running napari from a script, please use 'napari.run()' as follows:\n",
+      "\n",
+      "    import napari\n",
+      "\n",
+      "    viewer = napari.Viewer()  # no prior setup needed\n",
+      "    # other code using the viewer...\n",
+      "    napari.run()\n",
+      "\n",
+      "In IPython or Jupyter, 'napari.run()' is not necessary. napari will automatically\n",
+      "start an interactive event loop for you: \n",
+      "\n",
+      "    import napari\n",
+      "    viewer = napari.Viewer()  # that's it!\n",
+      "\n",
+      "  warn(\n",
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 938x1104+982+46 (frame: 960x1160+971+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 938x1102+982+46 (frame: 960x1158+971+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
+      "17-Dec-22 15:33:20 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 938x1104+982+46 (frame: 960x1160+971+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 938x1102+982+46 (frame: 960x1158+971+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
      ]
     }
    ],
@@ -60,6 +85,7 @@
     "threshold, img_1 = otsu_thresholding(img)\n",
     "\n",
     "images = [img, img_1]\n",
+    "visualize_all_list_napari(images,[\"original\",\"otsu\"])\n",
     "\n",
     "#visualize_all_list_napari(images)"
    ]
@@ -74,10 +100,10 @@
      "evalue": "OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/thresh.cpp:1674: error: (-215:Assertion failed) src.type() == CV_8UC1 in function 'adaptiveThreshold'\n",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m#img = cv.medianBlur(img,5)\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39m#img = to_uint8(img)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m ret,th1 \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39mthreshold(img,\u001b[39m127\u001b[39m,\u001b[39m255\u001b[39m,cv\u001b[39m.\u001b[39mTHRESH_BINARY)\n\u001b[0;32m----> 4\u001b[0m th2 \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39;49madaptiveThreshold(img,\u001b[39m255\u001b[39;49m,cv\u001b[39m.\u001b[39;49mADAPTIVE_THRESH_MEAN_C,cv\u001b[39m.\u001b[39;49mTHRESH_BINARY,\u001b[39m11\u001b[39;49m,\u001b[39m2\u001b[39;49m)\n\u001b[1;32m      5\u001b[0m th3 \u001b[39m=\u001b[39m cv\u001b[39m.\u001b[39madaptiveThreshold(img,\u001b[39m255\u001b[39m,cv\u001b[39m.\u001b[39mADAPTIVE_THRESH_GAUSSIAN_C,cv\u001b[39m.\u001b[39mTHRESH_BINARY,\u001b[39m11\u001b[39m,\u001b[39m2\u001b[39m)\n\u001b[1;32m      6\u001b[0m titles \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mOriginal Image\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mGlobal Thresholding (v = 127)\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      7\u001b[0m             \u001b[39m'\u001b[39m\u001b[39mAdaptive Mean Thresholding\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mAdaptive Gaussian Thresholding\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/thresh.cpp:1674: error: (-215:Assertion failed) src.type() == CV_8UC1 in function 'adaptiveThreshold'\n"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31merror\u001B[0m                                     Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[24], line 4\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[39m#img = cv.medianBlur(img,5)\u001B[39;00m\n\u001B[1;32m      2\u001B[0m \u001B[39m#img = to_uint8(img)\u001B[39;00m\n\u001B[1;32m      3\u001B[0m ret,th1 \u001B[39m=\u001B[39m cv\u001B[39m.\u001B[39mthreshold(img,\u001B[39m127\u001B[39m,\u001B[39m255\u001B[39m,cv\u001B[39m.\u001B[39mTHRESH_BINARY)\n\u001B[0;32m----> 4\u001B[0m th2 \u001B[39m=\u001B[39m cv\u001B[39m.\u001B[39;49madaptiveThreshold(img,\u001B[39m255\u001B[39;49m,cv\u001B[39m.\u001B[39;49mADAPTIVE_THRESH_MEAN_C,cv\u001B[39m.\u001B[39;49mTHRESH_BINARY,\u001B[39m11\u001B[39;49m,\u001B[39m2\u001B[39;49m)\n\u001B[1;32m      5\u001B[0m th3 \u001B[39m=\u001B[39m cv\u001B[39m.\u001B[39madaptiveThreshold(img,\u001B[39m255\u001B[39m,cv\u001B[39m.\u001B[39mADAPTIVE_THRESH_GAUSSIAN_C,cv\u001B[39m.\u001B[39mTHRESH_BINARY,\u001B[39m11\u001B[39m,\u001B[39m2\u001B[39m)\n\u001B[1;32m      6\u001B[0m titles \u001B[39m=\u001B[39m [\u001B[39m'\u001B[39m\u001B[39mOriginal Image\u001B[39m\u001B[39m'\u001B[39m, \u001B[39m'\u001B[39m\u001B[39mGlobal Thresholding (v = 127)\u001B[39m\u001B[39m'\u001B[39m,\n\u001B[1;32m      7\u001B[0m             \u001B[39m'\u001B[39m\u001B[39mAdaptive Mean Thresholding\u001B[39m\u001B[39m'\u001B[39m, \u001B[39m'\u001B[39m\u001B[39mAdaptive Gaussian Thresholding\u001B[39m\u001B[39m'\u001B[39m]\n",
+      "\u001B[0;31merror\u001B[0m: OpenCV(4.6.0) /Users/runner/work/opencv-python/opencv-python/opencv/modules/imgproc/src/thresh.cpp:1674: error: (-215:Assertion failed) src.type() == CV_8UC1 in function 'adaptiveThreshold'\n"
      ]
     }
    ],
@@ -101,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -116,23 +142,23 @@
     "    return (image - np.min(image)) / (np.max(image) - np.min(image)) * 255\n",
     "\n",
     "# visualize the image with napari using its numpy array\n",
-    "def visualize_napari(numpy_img: np.ndarray):\n",
+    "def visualize_napari(numpy_img: np.ndarray,name):\n",
     "    \"\"\"\n",
     "    :param numpy_img: image to be visualized\n",
     "    \"\"\"\n",
     "    with napari.gui_qt():\n",
     "        viewer = napari.Viewer()\n",
-    "        viewer.add_image(numpy_img)\n",
+    "        viewer.add_image(numpy_img,name=name)\n",
     "\n",
     "# visualize different images in the same moment\n",
-    "def visualize_all_list_napari(numpy_img_list: np.ndarray):\n",
+    "def visualize_all_list_napari(numpy_img_list: np.ndarray,names):\n",
     "    \"\"\"\n",
     "    :param numpy_img_list: list containing different images to be visualized\n",
     "    \"\"\"\n",
     "    with napari.gui_qt():\n",
     "        viewer = napari.Viewer()\n",
-    "        for img in numpy_img_list:\n",
-    "            viewer.add_image(img)\n",
+    "        for i, img in enumerate(numpy_img_list):\n",
+    "            viewer.add_image(img, name=names[i] )\n",
     "\n",
     "# plot histogram of pixel intensity\n",
     "def plot_histogram(image: np.ndarray):\n",
@@ -229,13 +255,11 @@
      ]
     }
    ],
-   "source": [
-    "visualize_all_list_napari(images)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -431,14 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/TB/lib/python3.9/site-packages/napari/_qt/qt_event_loop.py:284: FutureWarning: \n",
+      "C:\\Users\\matteo\\anaconda3\\envs\\tub\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
       "The 'gui_qt()' context manager is deprecated.\n",
       "If you are running napari from a script, please use 'napari.run()' as follows:\n",
       "\n",
@@ -454,7 +478,9 @@
       "    import napari\n",
       "    viewer = napari.Viewer()  # that's it!\n",
       "\n",
-      "  warn(\n"
+      "  warn(\n",
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 938x1104+992+46 (frame: 960x1160+981+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 938x1102+992+46 (frame: 960x1158+981+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
+      "17-Dec-22 15:36:43 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 938x1104+992+46 (frame: 960x1160+981+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 938x1102+992+46 (frame: 960x1158+981+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
      ]
     }
    ],
@@ -465,7 +491,7 @@
     "_, sharpened_hard_trhesh = hard_thresholding(img_sharpened, 7000)\n",
     "images = [img, img_sharpened, otsu_thesh_sharp, otsu_thresh_orig, sharpened_hard_trhesh]\n",
     "\n",
-    "visualize_all_list_napari(images)"
+    "visualize_all_list_napari(images,[\"original\",\"shapened\",\"otsu on sharpened\",\"otsu on orig\",\"hard tresh 7000\"])"
    ]
   },
   {
@@ -548,46 +574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": [
-    "def otsu_split_thresholding(img: np.ndarray, tile_size = 32):\n",
-    "    \"\"\"\n",
-    "    Perform Otsu tresholding on sub images of 32 x 32,\n",
-    "    then reconstruct\n",
-    "\n",
-    "    :param img:  image to be tresholded\n",
-    "    \"\"\"\n",
-    "    #sharpen image\n",
-    "    sharpened_img=sharpen(img)\n",
-    "    #split\n",
-    "    tiles=split_into_tiles(sharpened_img, tile_size)\n",
-    "    #otsu on big image\n",
-    "    r_big,th_big=otsu_thresholding(sharpened_img)\n",
-    "    #otsu on sub-images\n",
-    "    thresholded_tiles=[]\n",
-    "    for t in tiles:\n",
-    "        r,th=otsu_thresholding(t)\n",
-    "        thresholded_tiles.append(th)\n",
-    "    #reconstruct\n",
-    "    reconstructed_image=reconstruct_image(thresholded_tiles,64,47)\n",
-    "    #visualize\n",
-    "    visualize_all_list_napari([reconstructed_image,sharpened_img,img,th_big])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/anaconda3/envs/TB/lib/python3.9/site-packages/napari/_qt/qt_event_loop.py:284: FutureWarning: \n",
+      "C:\\Users\\matteo\\anaconda3\\envs\\tub\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
       "The 'gui_qt()' context manager is deprecated.\n",
       "If you are running napari from a script, please use 'napari.run()' as follows:\n",
       "\n",
@@ -603,13 +599,99 @@
       "    import napari\n",
       "    viewer = napari.Viewer()  # that's it!\n",
       "\n",
-      "  warn(\n"
+      "  warn(\n",
+      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 938x1104+12+46 (frame: 960x1160+1+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 938x1102+12+46 (frame: 960x1158+1+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
+      "17-Dec-22 16:18:04 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 938x1104+12+46 (frame: 960x1160+1+1) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 938x1102+12+46 (frame: 960x1158+1+1) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
      ]
     }
    ],
    "source": [
-    "otsu_split_thresholding(img)"
+    "def otsu_split_thresholding(img: np.ndarray, tile_size = 32):\n",
+    "    \"\"\"\n",
+    "    Perform Otsu tresholding on sub images of 32 x 32,\n",
+    "    then reconstruct\n",
+    "\n",
+    "    :param img:  image to be tresholded\n",
+    "    \"\"\"\n",
+    "    #sharpen image\n",
+    "    sharpened_img = sharpen(img)\n",
+    "    #split\n",
+    "    tiles_sharpened=split_into_tiles(sharpened_img, tile_size)\n",
+    "    tiles=split_into_tiles(img,tile_size)\n",
+    "    #without sharpening\n",
+    "    thresholded_tiles_sharp=[]\n",
+    "    for t in tiles_sharpened:\n",
+    "        r,th=otsu_thresholding(t)\n",
+    "        thresholded_tiles_sharp.append(th)\n",
+    "\n",
+    "    return thresholded_tiles_sharp\n",
+    "\n",
+    "\n",
+    "#reconstruct\n",
+    "reconstructed_image_sharp_32=reconstruct_image(otsu_split_thresholding(img),64,47)\n",
+    "#otsu on sub-images\n",
+    "reconstructed_image_sharp_16=reconstruct_image(otsu_split_thresholding(img,16),128,94)\n",
+    "sharpened_img = sharpen(img)\n",
+    "\n",
+    "#visualize\n",
+    "visualize_all_list_napari([reconstructed_image_sharp_32,reconstructed_image_sharp_16,sharpened_img,img],[\"sharpend reconstruton 32\",\"sharpend reconstruton 16\",\"sharped\",\"orig\"])\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "OpenCV(4.6.0) D:/a/opencv-python/opencv-python/opencv/modules/imgproc/src/filter.simd.hpp:3297: error: (-213:The function/feature is not implemented) Unsupported combination of source format (=4), and destination format (=4) in function 'cv::opt_AVX2::getLinearFilter'\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31merror\u001B[0m                                     Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[21], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m tile0\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39muint8(\u001B[43motsu_split_thresholding\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimg\u001B[49m\u001B[43m,\u001B[49m\u001B[38;5;241;43m16\u001B[39;49m\u001B[43m)\u001B[49m[\u001B[38;5;241m0\u001B[39m])\n\u001B[0;32m      2\u001B[0m num,img\u001B[38;5;241m=\u001B[39mcv\u001B[38;5;241m.\u001B[39mconnectedComponents(tile0)\n\u001B[0;32m      3\u001B[0m \u001B[38;5;28mprint\u001B[39m(num)\n",
+      "Cell \u001B[1;32mIn[12], line 9\u001B[0m, in \u001B[0;36motsu_split_thresholding\u001B[1;34m(img, tile_size)\u001B[0m\n\u001B[0;32m      2\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m      3\u001B[0m \u001B[38;5;124;03mPerform Otsu tresholding on sub images of 32 x 32,\u001B[39;00m\n\u001B[0;32m      4\u001B[0m \u001B[38;5;124;03mthen reconstruct\u001B[39;00m\n\u001B[0;32m      5\u001B[0m \n\u001B[0;32m      6\u001B[0m \u001B[38;5;124;03m:param img:  image to be tresholded\u001B[39;00m\n\u001B[0;32m      7\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m      8\u001B[0m \u001B[38;5;66;03m#sharpen image\u001B[39;00m\n\u001B[1;32m----> 9\u001B[0m sharpened_img \u001B[38;5;241m=\u001B[39m \u001B[43msharpen\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimg\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m     10\u001B[0m \u001B[38;5;66;03m#split\u001B[39;00m\n\u001B[0;32m     11\u001B[0m tiles_sharpened\u001B[38;5;241m=\u001B[39msplit_into_tiles(sharpened_img, tile_size)\n",
+      "Cell \u001B[1;32mIn[6], line 53\u001B[0m, in \u001B[0;36msharpen\u001B[1;34m(image)\u001B[0m\n\u001B[0;32m     48\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m     49\u001B[0m \u001B[38;5;124;03m:param image: image to be sharpened\u001B[39;00m\n\u001B[0;32m     50\u001B[0m \u001B[38;5;124;03m:return: sharp image\u001B[39;00m\n\u001B[0;32m     51\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m     52\u001B[0m kernel \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39marray([[\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m], [\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m9\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m], [\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m,\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m]])\n\u001B[1;32m---> 53\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mcv\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfilter2D\u001B[49m\u001B[43m(\u001B[49m\u001B[43mimage\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkernel\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[1;31merror\u001B[0m: OpenCV(4.6.0) D:/a/opencv-python/opencv-python/opencv/modules/imgproc/src/filter.simd.hpp:3297: error: (-213:The function/feature is not implemented) Unsupported combination of source format (=4), and destination format (=4) in function 'cv::opt_AVX2::getLinearFilter'\n"
+     ]
+    }
+   ],
+   "source": [
+    "tile0=np.uint8(otsu_split_thresholding(img,16)[0])\n",
+    "num,img=cv.connectedComponents(tile0)\n",
+    "print(num)\n",
+    "\n",
+    "#tiles=otsu_split_thresholding(img,16)\n",
+    "#for tile in tiles:\n",
+    "#    print(tile)\n",
+    "    #tile_uint8=np.unit8(tile)\n",
+    "    #num,img=cv.connectedComponents(tile_uint8)\n",
+    "    #print(num)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "now we are getting the tiles 16x16 that contains bacilli very well, but of course the background is difuse and messy because of the otsu threshold.\n",
+    "Okay approach: connected components.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "reconstructed_image_sharp_16"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
@@ -850,9 +932,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.15 ('TB')",
+   "name": "tub",
    "language": "python",
-   "name": "python3"
+   "display_name": "python tub"
   },
   "language_info": {
    "codemirror_mode": {
