added some comments

--- a/cleaned_otsu_thresholding.ipynb
+++ b/cleaned_otsu_thresholding.ipynb
@@ -19,12 +19,16 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "#ALL USED FUNCTIONS\n",
+    "# FUNCTION DEFINITIONS\n",
     "\n",
     "\n",
-    "#VISUALIZATION\n",
+    "# VISUALIZATION\n",
+    "\n",
     "# visualize the image with napari using its numpy array\n",
     "def visualize_napari(numpy_img: np.ndarray,name):\n",
     "    \"\"\"\n",
@@ -34,7 +38,8 @@
     "        viewer = napari.Viewer()\n",
     "        viewer.add_image(numpy_img,name=name)\n",
     "\n",
-    "# visualize different images in the same moment\n",
+    "\n",
+    "# visualize multiple images at once\n",
     "def visualize_all_list_napari(numpy_img_list: np.ndarray,names):\n",
     "    \"\"\"\n",
     "    :param numpy_img_list: list containing different images to be visualized\n",
@@ -46,7 +51,10 @@
     "\n",
     "\n",
     "\n",
-    "#PREPROCESSING\n",
+    "\n",
+    "# PREPROCESSING\n",
+    "\n",
+    "# sharpen image\n",
     "def sharpen(image: np.ndarray):\n",
     "    \"\"\"\n",
     "    Sharpen the image\n",
@@ -59,7 +67,7 @@
     "\n",
     "\n",
     "\n",
-    "#THRESHOLDING\n",
+    "# THRESHOLDING\n",
     "\n",
     "# compute Otsu's thresholding\n",
     "def otsu_thresholding(image : np.ndarray):\n",
@@ -71,7 +79,8 @@
     "              th: binary image\n",
     "    \"\"\"\n",
     "    ret,th = cv.threshold(image,0,255,cv.THRESH_BINARY+cv.THRESH_OTSU)\n",
-    "    #ret is the computed value of the threshold AND th is the image with the threshold applied\n",
+    "    \n",
+    "    # ret is the computed value of the threshold AND th is the image with the threshold applied\n",
     "    return ret, th\n",
     "\n",
     "\n",
@@ -85,85 +94,92 @@
     "    :return: tiles: list with the different tiles\n",
     "    \"\"\"\n",
     "    tiles = []\n",
+    "    \n",
     "    for i in range(0, image.shape[0], tile_size):\n",
     "        for j in range(0, image.shape[1], tile_size):\n",
     "            tile = image[i:i+tile_size, j:j+tile_size]\n",
     "            tiles.append(tile)\n",
+    "    \n",
     "    return tiles\n",
     "\n",
-    "#reconstruct image from different tiles given the number of tiles in x and y direction and a list of tiles\n",
+    "\n",
+    "# reconstruct image from different tiles given the number of tiles in x and y direction and a list of tiles\n",
     "def reconstruct_image(tiles: list, x_tiles: int, y_tiles: int):\n",
     "    \"\"\"\n",
     "    :param tiles:    list with the different single tiles\n",
-    "    :param x_tiles:  how many tiles fit in the x axis\n",
-    "    :param y_tiles:  how many tiles fit in the y axis\n",
+    "    :param x_tiles:  number of tiles along x axis\n",
+    "    :param y_tiles:  number of tiles along y axis\n",
     "    :return:         numpy array, reconstructed image\n",
     "    \"\"\"\n",
     "    big_image = np.zeros((x_tiles*tiles[0].shape[0], y_tiles*tiles[0].shape[1]))\n",
+    "    \n",
     "    for i in range(x_tiles):\n",
     "        for j in range(y_tiles):\n",
     "            big_image[i*tiles[0].shape[0]:(i+1)*tiles[0].shape[0], j*tiles[0].shape[1]:(j+1)*tiles[0].shape[1]] = tiles[i*y_tiles+j]\n",
+    "    \n",
     "    return big_image\n",
     "\n",
+    "\n",
+    "# apply Otsu tresholding on tiles after sharpening and splitting image\n",
     "def otsu_split_thresholding(img: np.ndarray, tile_size = 16):\n",
     "    \"\"\"\n",
     "    Perform Otsu tresholding on sub images of 16 x 16,\n",
     "    if a tile is all white do not apply otsu\n",
     "\n",
-    "    :param img:  image to be\n",
+    "    :param img:  input image\n",
     "    :return thresholded_tiles_sharp: list with thresholded tiles, to be recomposed\n",
     "    \"\"\"\n",
-    "    #sharpen image\n",
+    "    # sharpen image\n",
     "    sharpened_img = sharpen(img)\n",
-    "    #get the maximum of the sharpened img, needed to check ig image is all white\n",
+    "    \n",
+    "    # get the maximum of the sharpened img, needed to check if image is all white\n",
     "    max_value=sharpened_img.max()\n",
-    "    #split\n",
-    "    tiles_sharpened=split_into_tiles(sharpened_img, tile_size)\n",
-    "    #do thresholding\n",
+    "    \n",
+    "    # split\n",
+    "    tiles_sharpened = split_into_tiles(sharpened_img, tile_size)\n",
+    "    \n",
+    "    # do thresholding\n",
     "    thresholded_tiles_sharp=[]\n",
+    "    \n",
     "    for t in tiles_sharpened:\n",
-    "        #check if mostly white #ATTENTION, im touching the og in memory. If yes set direclty to black\n",
+    "        # check if mostly white #ATTENTION, im touching the og in memory. If yes set direclty to black\n",
     "        if check_all_white_tile(t,max_value):\n",
-    "            th=set_zero(t)\n",
+    "            th = set_zero(t)\n",
     "            thresholded_tiles_sharp.append(th)\n",
-    "        #else do thresholding\n",
+    "        # else do thresholding\n",
     "        else:\n",
-    "            r,th=otsu_thresholding(t)\n",
+    "            r,th = otsu_thresholding(t)\n",
     "            thresholded_tiles_sharp.append(th)\n",
-    "\n",
+    "    \n",
     "    return thresholded_tiles_sharp\n",
     "\n",
     "\n",
-    "\n",
+    "# clean the result of Otsu's thresholding on tiles\n",
     "def otsu_cleaned_split_thresholding(img):\n",
     "    \"\"\"\n",
-    "    Performe otsu thresholding on 16 x 16 images, then clean the image,\n",
-    "     delete the noise\n",
+    "    Perform otsu thresholding on 16 x 16 images, then clean the image, \n",
+    "    delete the noise\n",
     "\n",
     "    :param img: image to be tresholded\n",
     "    :return:    tresholded clean image\n",
     "    \"\"\"\n",
-    "\n",
-    "    #list with the thresholded tiles size 16x16\n",
+    "    # list with the thresholded tiles size 16x16\n",
     "    thresholded_tiles = otsu_split_thresholding(img,16)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "    #clean\n",
+    "    # clean\n",
     "    cleaned_tiles=[]\n",
     "    for tl in thresholded_tiles:\n",
-    "        #check if image is not a bacilli\n",
+    "        # check if image is not a bacilli\n",
     "        if check_image(tl):\n",
-    "            #im not a bacilli\n",
-    "            m=set_zero(tl)\n",
+    "            # I'm not a bacilli\n",
+    "            m = set_zero(tl)\n",
     "            cleaned_tiles.append(m)\n",
     "        else:\n",
-    "            #i am a bacilli\n",
+    "            # I am a bacilli\n",
     "            cleaned_tiles.append(tl)\n",
     "\n",
     "    #reconstruct\n",
-    "    reconstructed_clean_image=reconstruct_image(cleaned_tiles,128,94)\n",
+    "    reconstructed_clean_image = reconstruct_image(cleaned_tiles,128,94)\n",
     "\n",
     "    #final cleaning\n",
     "    #final_cleaned_image = (reconstructed_clean_image)\n",
@@ -174,8 +190,10 @@
     "    return reconstructed_clean_image\n",
     "\n",
     "\n",
+    "\n",
     "#POSTPROCESSING\n",
     "\n",
+    "# Check whether or not to keep specific tiles of image\n",
     "def check_image(img: np.ndarray):\n",
     "    \"\"\"\n",
     "    For every sub-image we check if its worth keeping or not\n",
@@ -184,16 +202,16 @@
     "    :param img: image to be checked\n",
     "    :return: bool\n",
     "    \"\"\"\n",
-    "\n",
     "    if np.sum(img == 0) > 215: #we have a bacilli\n",
     "        return False\n",
     "    else:\n",
     "        return True\n",
     "\n",
-    "#set pixels that are 255 to zero (black)\n",
+    "\n",
+    "# set pixels that are 255 to zero (black)\n",
     "def set_zero(img):\n",
-    "    h=img\n",
-    "    h[h>0]=0\n",
+    "    h = img\n",
+    "    h[h>0] = 0\n",
     "    return h\n",
     "\n",
     "\n",
@@ -211,6 +229,7 @@
     "    else:\n",
     "        return False\n",
     "\n",
+    "\n",
     "def clean_connected_components(img: np.ndarray):\n",
     "    \"\"\"\n",
     "    Clean image with 2 approaches: delete connected components that have are up to 2 pixels\n",
@@ -219,18 +238,19 @@
     "    :param img: image to be cleaned\n",
     "    :return:    cleaned image\n",
     "    \"\"\"\n",
-    "\n",
-    "    #find connected components\n",
+    "    # find connected components\n",
     "    num_labels, labels_im, stats, centroids = cv.connectedComponentsWithStats(np.uint8(img), connectivity=8)\n",
-    "    #stats = x,y,w,h,area\n",
+    "    # stats = x,y,w,h,area\n",
     "\n",
-    "    #put to black connected components which area is equal to 1 or 2\n",
+    "    # put to black connected components which area is equal to 1 or 2\n",
     "    for i in range(1, num_labels):\n",
     "        if stats[i][4] < 3:\n",
     "            img[labels_im == i] = 0\n",
-    "    #do not want to connect bacilli in original, want to connect after little components are gone\n",
-    "    img2=img.copy()\n",
-    "    #connect the bacilli, by putting a white tile\n",
+    "\n",
+    "    # do not want to connect bacilli in original, want to connect after little components are gone\n",
+    "    img2 = img.copy()\n",
+    "    \n",
+    "    # connect the bacilli, by putting a white tile\n",
     "    for i in range(1, img.shape[0]-1):\n",
     "        for j in range(1, img.shape[1]-1):\n",
     "            if img[i,j] == 0:\n",
@@ -244,7 +264,8 @@
     "\n",
     "    return img2\n",
     "\n",
-    "# add the 2d bounding boxes to the image\n",
+    "\n",
+    "# add 2d bounding boxes to the image\n",
     "def add_bounding_boxes(image, stats):\n",
     "    \"\"\"\n",
     "    Add white rectangles around bacilli, based on conected components\n",
@@ -260,149 +281,151 @@
     "            h=stats[i][3]\n",
     "            w=stats[i][2]\n",
     "            cv.rectangle(image, (x, y), (x+w+10, y+h+10), (255, 0, 0), 1)\n",
+    "    \n",
     "    return image"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#PIPELINE (until the end)\n",
     "\n",
     "# Load the image\n",
     "reader = CziReader(\"extern_Synlab_2156_17_3_MTB.czi\")\n",
+    "\n",
     "# Get whole image\n",
     "smear = reader.get_image_data(\"MYX\", C=0)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "# save in a new variable the information regarding the 673th tile out of 1345\n",
     "img = smear[674]\n",
     "img.shape\n",
-    "real_image=img.copy()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [],
-   "source": [
-    "#for comparison\n",
-    "_, otsu_thresholded_entire_og_img=otsu_thresholding(img)\n",
-    "sharpened_img=sharpen(img)\n",
-    "_, otsu_thresholded_entire_sharp_img = otsu_thresholding(sharpened_img)\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "real_image = img.copy()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "outputs": [],
-   "source": [
-    "#do split thresholding\n",
-    "otsu_st_16=reconstruct_image(otsu_split_thresholding(img,16),128,94)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# for comparison\n",
+    "_, otsu_thresholded_entire_og_img = otsu_thresholding(img)\n",
+    "sharpened_img = sharpen(img)\n",
+    "_, otsu_thresholded_entire_sharp_img = otsu_thresholding(sharpened_img)\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "#do split thresholding and clean noise from thresholding\n",
-    "otsu_st_16_cleaned_from_noise = otsu_cleaned_split_thresholding(img)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# do split thresholding\n",
+    "otsu_st_16 = reconstruct_image(otsu_split_thresholding(img,16),128,94)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "outputs": [],
-   "source": [
-    "#save new copy for comparison, not needed if we dont want comparison\n",
-    "a_bit_of_shit_in_our_bacilli_tiles = otsu_st_16_cleaned_from_noise .copy()"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# do split thresholding and clean noise from thresholding\n",
+    "otsu_st_16_cleaned_from_noise = otsu_cleaned_split_thresholding(img)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "outputs": [],
-   "source": [
-    "#cut small connected components and connect bacilli\n",
-    "cleaning_the_shit_on_the_bacilli_tiles = clean_connected_components(otsu_st_16_cleaned_from_noise)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# save new copy for comparison, not needed if we dont want comparison\n",
+    "a_bit_of_shit_in_our_bacilli_tiles = otsu_st_16_cleaned_from_noise.copy()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "#get stats for drawing boxes\n",
-    "num_labels, labels_im, stats, centroids = cv.connectedComponentsWithStats(np.uint8(cleaning_the_shit_on_the_bacilli_tiles), connectivity=8)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# cut small connected components and connect bacilli\n",
+    "cleaning_the_shit_on_the_bacilli_tiles = clean_connected_components(otsu_st_16_cleaned_from_noise)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "outputs": [],
-   "source": [
-    "#another copy----ask marina\n",
-    "bacilli =otsu_st_16_cleaned_from_noise.copy()"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# get stats for drawing boxes\n",
+    "num_labels, labels_im, stats, centroids = cv.connectedComponentsWithStats(np.uint8(cleaning_the_shit_on_the_bacilli_tiles), connectivity=8)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "outputs": [],
-   "source": [
-    "#add the boxes\n",
-    "box_bacilli = add_bounding_boxes(bacilli, stats)"
-   ],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# another copy----ask marina\n",
+    "bacilli = otsu_st_16_cleaned_from_noise.copy()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# add the boxes\n",
+    "box_bacilli = add_bounding_boxes(bacilli, stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\matteo\\anaconda3\\envs\\tub\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
+      "c:\\Users\\idabu\\.vscode\\TBProject\\.venv\\lib\\site-packages\\napari\\_qt\\qt_event_loop.py:284: FutureWarning: \n",
       "The 'gui_qt()' context manager is deprecated.\n",
       "If you are running napari from a script, please use 'napari.run()' as follows:\n",
       "\n",
@@ -418,47 +441,47 @@
       "    import napari\n",
       "    viewer = napari.Viewer()  # that's it!\n",
       "\n",
-      "  warn(\n",
-      "WARNING: QWindowsWindow::setGeometry: Unable to set geometry 1280x1104+0+34 (frame: 1302x1160-11-11) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1280x1102+0+34 (frame: 1302x1158-11-11) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n",
-      "18-Dec-22 13:00:08 - vispy    - WARNING  - QWindowsWindow::setGeometry: Unable to set geometry 1280x1104+0+34 (frame: 1302x1160-11-11) on QWidgetWindow/\"_QtMainWindowClassWindow\" on \"\\\\.\\DISPLAY1\". Resulting geometry: 1280x1102+0+34 (frame: 1302x1158-11-11) margins: 11, 45, 11, 11 minimum size: 374x551 MINMAXINFO maxSize=0,0 maxpos=0,0 mintrack=770,1158 maxtrack=0,0)\n"
+      "  warn(\n"
      ]
     }
    ],
    "source": [
-    "#visualize\n",
+    "# visualize\n",
     "visualize_all_list_napari([box_bacilli,cleaning_the_shit_on_the_bacilli_tiles,a_bit_of_shit_in_our_bacilli_tiles,otsu_st_16_cleaned_from_noise,otsu_st_16,img],[\"boxes\",\"no 1s and unite bacilli\", \"a bit of artifacts\",\"cleaned split otsu\",\"split otsu\",\"og\"])"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "tub",
+   "display_name": ".venv",
    "language": "python",
-   "display_name": "python tub"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0cf0400bafce4d7edbfaf4891a12032e9db7137fe6873ee0b0e8d57dbd33a75b"
+   }
   }
  },
  "nbformat": 4,
