--- a/cleaned_otsu_thresholding.ipynb
+++ b/cleaned_otsu_thresholding.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -404,19 +404,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# add the boxes\n",
-    "box_bacilli = add_bounding_boxes(bacilli, stats)"
+    "box_bacilli = add_bounding_boxes(bacilli, stats)\n",
+    "\n",
+    "# add boxes to original image\n",
+    "img_copy = img.copy()\n",
+    "box_bacilli_og = add_bounding_boxes(img_copy, stats)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -447,16 +451,24 @@
    ],
    "source": [
     "# visualize\n",
-    "visualize_all_list_napari([box_bacilli,cleaning_the_shit_on_the_bacilli_tiles,a_bit_of_shit_in_our_bacilli_tiles,otsu_st_16_cleaned_from_noise,otsu_st_16,img],[\"boxes\",\"no 1s and unite bacilli\", \"a bit of artifacts\",\"cleaned split otsu\",\"split otsu\",\"og\"])"
+    "visualize_all_list_napari([box_bacilli,box_bacilli_og,cleaning_the_shit_on_the_bacilli_tiles,a_bit_of_shit_in_our_bacilli_tiles,otsu_st_16_cleaned_from_noise,otsu_st_16,img],[\"boxes\",\"boxes in og\",\"no 1s and unite bacilli\", \"a bit of artifacts\",\"cleaned split otsu\",\"split otsu\",\"og\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9852870\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
@@ -476,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
